--- a/web.xml
+++ b/web.xml
@@ -1,4 +1,6 @@
-
+version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/webapp_2_5.xsd"
 <description>Transfermarkt</description>
 <display-name>transFermarkt</display-name>
 <servlet>
